--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 eframe = "0.29.1"
 egui = "0.29.1"
+quadtree = "0.3.5"
 rand = "0.8.5"
 rhai = "1.19.0"
 rhai-rand = "0.1.6"
