--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 eframe = "0.29.1"
 egui = "0.29.1"
 rand = "0.8.5"
+rayon = "1.10.0"
 rhai = "1.19.0"
 rhai-rand = "0.1.6"
 uuid = { version = "1.11.0", features = ["v4"] }
